--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "Min",
-  "version": "1.1.1",
+  "name": "Bit",
+  "version": "0.0.0",
   "electronVersion": "0.37.1",
   "main": "main.build.js",
   "dependencies": {
